Kleopatra should allow the generation of OpenPGP (public) keys for NetKey card keys.
Description
Description
Details
Details
- Version
- master
Revisions and Commits
Revisions and Commits
rKLEOPATRA Kleopatra | |||
rKLEOPATRA94db3fd2d49d Disable creation of OpenPGP keys for card keys if NKS PIN has not set | |||
rKLEOPATRA3c1a40d9c1ed Enable creation of OpenPGP keys iff NetKey card has required keys | |||
rKLEOPATRAced1ac37a4bf Offer creation of OpenPGP keys from card keys only if supported by gpg | |||
rKLEOPATRA5f6c5636f4da Allow creating an OpenPGP key for the keys on a NetKey card | |||
rKLEOPATRA9dbf347d3ece Parse key pair info for NetKey cards using the base class | |||
rKLEOPATRAd2bf514e4963 Fetch and store IDs of signing key and encryption key for card | |||
rKLEOPATRA3ca64c7519fe Parse and store the key pair info in the Card base class |
Status | Assigned | Task | ||
---|---|---|---|---|
Testing | • aheinecke | T5123 Kleopatra: Generate OpenPGP pubkey S/MIME CSR from existing card | ||
Resolved | • aheinecke | T5128 Kleopatra: Generate OpenPGP public key for NetKey card key | ||
Resolved | • gniibe | T5144 scd: Fails/crashes on SCD LEARN --keypairinfo for NetKey cards | ||
Resolved | ikloecker | T5141 GnuPG: Make quick-gen-key work for keys on PIV cards | ||
Resolved | • gniibe | T5150 scd: For NetKey cards READKEY with keygrip fails | ||
Resolved | • gniibe | T5161 scd: For NetKey cards KEYINFO with keygrip fails |
Event Timeline
Comment Actions
Should work now with GnuPG master (from today). Probably also works with GnuPG 2.2.18.
Note that I have not fully tested this because I have only one NetKey card and I don't want to change the NullPIN for this card (which prevents the necessary signing operations).