Allow creating an OpenPGP key for the keys on a NetKey card

GnuPG-bug-id: 5128